--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -13,6 +13,7 @@
     <link href="{{ path('latest', {'format': 'atom'}) }}" rel="alternate" title="ATOM" type="application/atom+xml" />
     <link href="{{ asset('bundles/knpbundles/css/reset.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{{ asset('bundles/knpbundles/css/style.css') }}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{{ asset('bundles/knpbundles/css/tipsy.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -121,6 +122,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="{{ asset('bundles/knpbundles/js/jquery.hotkeys.js') }}"></script>
     <script src="{{ asset('bundles/knpbundles/js/jquery.ba-viewportoffset.min.js') }}"></script>
+    <script src="{{ asset('bundles/knpbundles/js/jquery.tipsy.js') }}"></script>
     <script src="{{ asset('bundles/knpbundles/js/main.js') }}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     </body>
