--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -38,7 +38,7 @@
             <ul>
                 <li class="bundle-recommenders">
                     {% for user in bundle.recommenders %}
-                        <img src="{{ gravatar_hash(user.gravatarHash, 25, none, 'identicon')}}" rel="tipsy" title="{{ user.name }}" />
+                        <img src="{{ gravatar_hash(user.gravatarHash, 25, none, 'identicon')}}" class="tooltip" title="{{ user.name }}" />
                     {% endfor %}
                 </li>
                 <li>
