added about scoring page

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -67,8 +67,9 @@
                         <ul>
                             <li><a href="https://github.com/knplabs/knpbundles">{% trans %}footer.code{% endtrans %}</a></li>
                             <li><a href="{{ path('api') }}">API</a></li>
+                            <li><a href="{{ path('scoring') }}">{% trans %}Scoring explanation{% endtrans %}</a></li>
                             <li><a href="{{ path('symfony2bundles') }}">Symfony2bundles</a></li>
-                            
+
                         </ul>
                     </dd>
                 </dl>
