--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -10,6 +10,7 @@
     <link href="{{ asset('bundles/knpbundles/css/reset.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{{ asset('bundles/knpbundles/css/style.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{{ asset('bundles/knpbundles/css/tipsy.css') }}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{{ asset('bundles/knpbundles/css/modal.css') }}" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -102,6 +103,7 @@
     <script src="{{ asset('bundles/knpbundles/js/jquery.hotkeys.js') }}"></script>
     <script src="{{ asset('bundles/knpbundles/js/jquery.ba-viewportoffset.min.js') }}"></script>
     <script src="{{ asset('bundles/knpbundles/js/jquery.tipsy.js') }}"></script>
+    <script src="{{ asset('bundles/knpbundles/js/bootstrap-modal.js') }}"></script>
     <script src="{{ asset('bundles/knpbundles/js/main.js') }}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     </body>
